@@ -1,3 +1,7 @@
+2016-08-03  Natalia Portillo  <claunia@claunia.com>
+
+	* SysV.cs: Corrected XENIX 3 superblock information.
+
 2016-08-01  Natalia Portillo  <claunia@claunia.com>
 
 	* AssemblyInfo.cs:
